--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -1,5 +1,5 @@
 .fullWithdrawComponent{
-    background-color: orange;
+    background-image: linear-gradient(45.34deg, rgb(0, 16, 43) 5.66%, #10203b 94.35%);
     height: 60vh;
     display: flex;
     flex-direction: column;
