--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -9,3 +9,12 @@
     display: flex;
     flex-direction: row;
 }
+
+.withdrawSection{
+    display: flex;
+    flex-direction: column;
+    background-color: blueviolet;
+    height: 20vh;
+    width: 20vw;
+    align-self: center;
+}
