--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -39,4 +39,6 @@
 .withdrawButton{
     background-color: rgb(139, 110, 35);
     font-size: 18px;
+    border-radius: 10px;
+    align-self: center;
 }
