lots of changes to withdraw header

--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -23,11 +23,11 @@
 }
 
 .withdrawHeader{
-    font-family: 'Dosis', sans-serif;
-    letter-spacing: 2px;
+    font-family: 'Titan One', cursive;
+    letter-spacing: 1px;
     font-size: 40px;
     color: white;
-    margin-left: 3.5vw;
+    margin-left: 1.5vw;
     margin-bottom: 2vh;
     margin-top: .8vh;
 }
