--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -73,14 +73,14 @@
     background-color: rgb(3, 17, 42);
 }
 
-.displayField{
+#displayField{
     position: absolute;
-    height: 50vh;
-    width: 40vw;
-    background-color: green;
+    height: 61vh;
+    width: 26vw;
+    /* background-color: gold; */
     align-self: center;
-    margin-left: 30vw;
-    display: none;
+    margin-left: 35vw;
+    z-index: 100;
 }
 
 .coverimage{
@@ -311,3 +311,4 @@ margin-left: 40vw;
     font-size: larger; 
     margin-left: 5vw;
 }
+
