got store to work and setup models to work, now I have to make the post requests

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -74,13 +74,14 @@
 }
 
 #displayField{
+    visibility: hidden;
     position: absolute;
     height: 61vh;
     width: 26vw;
     /* background-color: gold; */
     align-self: center;
     margin-left: 35vw;
-    z-index: 100;
+    z-index: 10;
 }
 
 .coverimage{
