styled delete componenet somewhat

--- a/src/components/DeleteComponent.css
+++ b/src/components/DeleteComponent.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis&family=Mynerve&family=Titan+One&display=swap');
 
 
-.fullDepositComponent{
+.fullDeleteComponent{
     background-image: linear-gradient(45.34deg, rgb(0, 16, 43) 5.66%, #10203b 94.35%);
     height: 60vh;
     display: flex;
@@ -22,7 +22,7 @@
     font-weight: 600;
 }
 
-.depositHeader{
+.deleteHeader{
     font-family: 'Titan One', cursive;
     letter-spacing: 1px;
     font-size: 40px;
@@ -32,7 +32,7 @@
     margin-top: .8vh;
 }
 
-.depositSection{
+.deleteSection{
     display: flex;
     flex-direction: column;
     background-color: #414E65;
@@ -44,12 +44,12 @@
     border-radius: 8px;
 }
 
-.depositSectionHeader{
+.deleteSectionHeader{
     height: 5vh;
     color: white;
 }
 
-.depositField{
+.deleteField{
     background-color: #414E65;
     height: 10vh;
     font-size: 30px;
@@ -59,7 +59,7 @@
     border: solid 1px #414E65;
 }
 
-.depositField::placeholder{
+.deleteField::placeholder{
     background-color: #414E65;
     height: 10vh;
     font-size: 30px;
@@ -69,7 +69,7 @@
     border: solid 1px #414E65;
 }
 
-.depositButton{
+.deleteButton{
     background-color: rgb(139, 110, 35);
     font-size: 18px;
     border-radius: 10px;
