changed background color again

--- a/src/components/DeleteBasicBankComponent.css
+++ b/src/components/DeleteBasicBankComponent.css
@@ -3,5 +3,5 @@
 .fullDeletebb{
     border: solid 2px green;
     height: 50vh;
-    background-color: blue;
+    background-color: rgb(3, 17, 42);
 }
