added span tags to the delete header body

--- a/src/components/DeleteBasicBankComponent.css
+++ b/src/components/DeleteBasicBankComponent.css
@@ -2,6 +2,7 @@
 
 .fullDeletebb{
     height: 50vh;
+    width: 30vw;
     background-color: rgb(3, 17, 42);
     color: white;
     align-items: center;
