--- a/src/components/DepositComponent.css
+++ b/src/components/DepositComponent.css
@@ -57,7 +57,8 @@
     color: white;
     font-family: 'Titan One', cursive;
     margin-left: 1vw;
-    border: solid 1px #414E65;
+    border: solid 1px green;
+    width: 8vw;
 }
 
 .depositField::placeholder{
