--- a/src/components/DepositComponent.css
+++ b/src/components/DepositComponent.css
@@ -50,6 +50,10 @@
     align-self: center;
 }
 
+.depositFieldSection{
+    
+}
+
 .depositField{
     background-color: #414E65;
     height: 10vh;
