added dollar sgin css block

--- a/src/components/DepositComponent.css
+++ b/src/components/DepositComponent.css
@@ -56,6 +56,10 @@ height: 12vh;
 border: solid 2px green;
 }
 
+.dollarSign{
+    
+}
+
 .depositField{
     background-color: #414E65;
     height: 10vh;
