changed the flex directionj on the depoisti field section to be row

--- a/src/components/DepositComponent.css
+++ b/src/components/DepositComponent.css
@@ -45,6 +45,8 @@
 }
 
 .depositFieldSection{
+    display: flex;
+    flex-direction: row;
     width: 18vw;
     height: 12vh;
     border: solid 2px green;
