also used align self on deposti field to match the dollar sign

--- a/src/components/DepositComponent.css
+++ b/src/components/DepositComponent.css
@@ -66,6 +66,7 @@
 
 .depositField{
     background-color: #414E65;
+    align-self: center;
     height: 10vh;
     font-size: 30px;
     color: white;
