--- a/src/components/DepositConfirmation.css
+++ b/src/components/DepositConfirmation.css
@@ -23,7 +23,7 @@
     font-weight: 600;
 }
 
-.thedepositHeader{
+.depositConfrimationHeader{
     font-family: 'Titan One', cursive;
     letter-spacing: 1px;
     font-size: 25px;
@@ -32,6 +32,7 @@
     margin-bottom: 2vh;
     margin-top: 2.5vh;
     width: 15vw;
+    border: solid 2px green;
 }
 
 .thedepositSection{
