--- a/src/components/WithdrawConfirmation.css
+++ b/src/components/WithdrawConfirmation.css
@@ -71,9 +71,10 @@
     border: solid 1px #414E65;
 }
 
-.thewithdrawButton{
+.withdrawConfirmationButton{
     background-color: rgb(139, 110, 35);
     font-size: 18px;
     border-radius: 10px;
     align-self: center;
+    margin-top: 4vh;
 }
