--- a/src/components/WithdrawConfirmation.css
+++ b/src/components/WithdrawConfirmation.css
@@ -73,6 +73,7 @@
 
 .withdrawConfirmationButton{
     background-color: rgb(139, 110, 35);
+    width: 20vw;
     font-size: 18px;
     border-radius: 10px;
     align-self: center;
