aligned withdraw header to the middle

--- a/src/components/WithdrawConfirmation.css
+++ b/src/components/WithdrawConfirmation.css
@@ -49,6 +49,8 @@
 .thewithdrawSectionHeader{
     height: 5vh;
     color: white;
+    align-self: center;
+    border: solid 2px green;
 }
 
 .thewithdrawField{
