--- a/src/components/DepositComponent.css
+++ b/src/components/DepositComponent.css
@@ -69,12 +69,13 @@
 
 .depositField{
     background-color: #414E65;
-    align-self: center;
+    align-content: center;
     height: 10vh;
     font-size: 40px;
     color: white;
     font-family: 'Titan One', cursive;
     width: 8vw;
+    padding-left: .5vw;
 }
 
 .depositField::placeholder{
