--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -73,10 +73,7 @@
     font-size: 40px;
     color: white;
     font-family: 'Titan One', cursive;
-    margin-left: 1vw;
-    border: solid 1px #414E65;
-    align-self: center;
-    border: solid 2px green;
+    width: 8vw;
 
 }
 
