added margin top to withdraw field

--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -75,6 +75,7 @@
     font-family: 'Titan One', cursive;
     width: 8vw;
     padding-left: .5vw;
+    margin-top: 1vh;
 }
 
 .withdrawField::placeholder{
