added align content to withdraw field

--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -69,6 +69,7 @@
 
 .withdrawField{
     background-color: #414E65;
+    align-content: center;
     height: 10vh;
     font-size: 40px;
     color: white;
