added width of 8v to the withdraw field

--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -83,6 +83,7 @@
     background-color: #414E65;
     height: 10vh;
     font-size: 35px;
+    width: 8vw;
     color: white;
     font-family: 'Titan One', cursive;
     margin-left: 1vw;
