--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -90,9 +90,10 @@
     border: solid 1px #414E65;
 }
 
-.withdrawButton{
+.withdrawComponentButton{
     background-color: rgb(139, 110, 35);
     font-size: 18px;
     border-radius: 10px;
     align-self: center;
+    margin-top: 2.5vh;
 }
