added height to withdreaw component button

--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -95,5 +95,6 @@
     font-size: 18px;
     border-radius: 10px;
     align-self: center;
-    margin-top: 2.5vh;
+    margin-top: 3vh;
+    height: 8vh;
 }
