changed style of withdraw button on account card

--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -69,4 +69,9 @@ letter-spacing: 1.5px;
     font-size: 30px;
     font-weight: 600;
     letter-spacing: 1.5px;
+    background-color: rgb(139, 110, 35);
+    font-size: 18px;
+    border-radius: 10px;
+    align-self: center;
+    margin-top: 3vh;
 }
