--- a/src/components/DepositComponent.css
+++ b/src/components/DepositComponent.css
@@ -91,9 +91,18 @@
 }
 
 .depositButton{
-    background-color: rgb(139, 110, 35);
-    font-size: 18px;
-    border-radius: 10px;
-    align-self: center;
-    margin-top: 3vh;
+width: 20vw;
+height: 8vh;
+background-color: white;
+border: solid 3px rgb(3, 17, 42);
+margin-bottom: 1vh;
+color: rgb(3, 17, 42);
+font-size: 30px;
+font-weight: 600;
+letter-spacing: 1.5px;
+background-color: rgb(139, 110, 35);
+font-size: 18px;
+border-radius: 10px;
+align-self: center;
+margin-top: 3vh;
 }
