--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -47,7 +47,7 @@ margin-right: 1.5vw;
     margin-left: 5vw;
 }
 
-.depositButton{
+.accountCardDepositButton{
 width: 20vw;
 height: 8vh;
 background-color: white;
@@ -57,9 +57,13 @@ color: rgb(3, 17, 42);
 font-size: 30px;
 font-weight: 600;
 letter-spacing: 1.5px;
+background-color: rgb(139, 110, 35);
+font-size: 18px;
+border-radius: 10px;
+align-self: center;
 }
 
-.withdrawButton{
+.accountCardWithdrawButton{
     width: 20vw;
     height: 8vh;
     background-color: white;
@@ -73,5 +77,4 @@ letter-spacing: 1.5px;
     font-size: 18px;
     border-radius: 10px;
     align-self: center;
-    margin-top: 3vh;
 }
