--- a/src/components/DeleteComponent.css
+++ b/src/components/DeleteComponent.css
@@ -54,24 +54,25 @@
 
 .deletetype{
     background-color: #414E65;
-    width: 5vw;
-    height: 10vh;
+    width: 8vw;
+    height: 8vh;
     font-size: 30px;
     color: white;
     font-family: 'Titan One', cursive;
-    margin-left: 1vw;
     border: solid 1px #414E65;
     border: solid 2px green;
+    align-self: center;
 }
 
-.deleteField::placeholder{
+.deletetype::placeholder{
     background-color: #414E65;
-    height: 10vh;
-    font-size: 30px;
+    width: 5vw;
+    height: 12vh;
     color: white;
     font-family: 'Titan One', cursive;
     margin-left: 1vw;
     border: solid 1px #414E65;
+    align-content: center;
 }
 
 .deleteButton{
@@ -81,8 +82,3 @@
     align-self: center;
 }
 
-.deletetype{
-    width: 10vw;
-    height: 5vh;
-    align-self: center;
-}
