added black border to the deletetype

--- a/src/components/DeleteComponent.css
+++ b/src/components/DeleteComponent.css
@@ -60,7 +60,7 @@
     color: white;
     font-family: 'Titan One', cursive;
     border: solid 1px #414E65;
-    border: solid 2px green;
+    border: solid 2px black;
     align-self: center;
 }
 
