--- a/src/components/DeleteConfirmation.css
+++ b/src/components/DeleteConfirmation.css
@@ -54,11 +54,15 @@
 .thedeleteField{
     background-color: #414E65;
     height: 10vh;
+    width: 18vw;
     font-size: 20px;
     color: white;
     font-family: 'Titan One', cursive;
     border: solid 1px #414E65;
     border: solid 2px green;
+    display: flex;
+    flex-flow: column;
+    align-self: center;
 }
 
 .thedeleteField::placeholder{
