added margin left to delete button

--- a/src/components/DeleteConfirmation.css
+++ b/src/components/DeleteConfirmation.css
@@ -79,5 +79,6 @@
     font-size: 18px;
     border-radius: 10px;
     align-self: center;
-    width: 20vw;
+    width: 19vw;
+    margin-left: .5vw;
 }
