addd new classname for deletebb top row to avoid collisions

--- a/src/components/DeleteBasicBankComponent.css
+++ b/src/components/DeleteBasicBankComponent.css
@@ -11,12 +11,16 @@
     flex-direction: column;
 }
 
+.deleteBBtoprow{
+
+}
+
 .deletebbHeader{
     margin-left: 1vw;
 }
 
 .deleteBBXout{
-    
+    border: solid 2px green;
 }
 
 .theText{
