--- a/src/components/DeleteBasicBankComponent.css
+++ b/src/components/DeleteBasicBankComponent.css
@@ -14,6 +14,9 @@
 .deleteBBtoprow{
 display: flex;
 flex-direction: row;
+border: solid 2px red;
+width: 15vw;
+margin-top: 2vh;
 }
 
 .deletebbHeader{
