--- a/src/components/DeleteBasicBankComponent.css
+++ b/src/components/DeleteBasicBankComponent.css
@@ -40,5 +40,8 @@ border: solid 2px green;
     border: solid 2px green;
     width: 18vw;
     height: 6vh;
-    border-radius: 12px;
-}
+    font-weight: 600;
+    letter-spacing: 1.5px;
+    background-color: rgb(139, 110, 35);
+    font-size: 18px;
+    border-radius: 10px;}
