--- a/src/components/DeleteBasicBankComponent.css
+++ b/src/components/DeleteBasicBankComponent.css
@@ -44,4 +44,6 @@ border: solid 2px green;
     letter-spacing: 1.5px;
     background-color: rgb(139, 110, 35);
     font-size: 18px;
-    border-radius: 10px;}
+    border-radius: 10px;
+    color: rgb(3, 17, 42);
+}
