changed width of delete to 8vw

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -58,10 +58,11 @@
 .state{
     font-size: 30px;
     font-weight: 500;
-    width: 20vw;
+    width: 8vw;
     color:rgb(3, 17, 42);
     margin-left: 10vw;
     margin-top: 2vh;
+    border: solid 2px green;
 }
 
 .bottomsection{
