made divider class sites gold color

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -316,7 +316,7 @@ margin-left: 40vw;
 .divider{
 height: 7vh;
 width: .5vw;
-background-color: blue;
+background-color: rgb(209, 152, 7);
 margin-top: 2vh;
 }
 
