imported Open component css

--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -1,4 +1,7 @@
 
 .fullOpenComponent{
-    background-color: blue;
+    background-color: orange;
+    border: solid 2px green;
+    height: 40vh;
+    width: 30vw;
 }
