changed background color on fullopencomponent to the sites blue theme

--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -1,6 +1,6 @@
 
 .fullOpenComponent{
-    background-color: orange;
+    background-color: rgb(3, 17, 42);
     border: solid 2px green;
     height: 40vh;
     width: 30vw;
