--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -87,12 +87,14 @@
 .coverimage{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     width: 100vw;
     height: 78vh;
     background-image: url("../../public/better\ bridge.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 90%;
+    border: solid 2px green;
 }
 
 .accountscontainer{
