--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -8,6 +8,7 @@
 
 .opencreateUserSection{
     display: flex;
+    height: 30vh;
     flex-direction: row;
     margin: 2vh;
     border: solid 2px green;
