--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -22,10 +22,10 @@
 }
 
 .openAccountPlaceholder{
-    border: solid 2px red;
     width: 10vw;
     height: 8vh;
     margin: 2vh;
     font-size: 25px;
     background-color: rgb(139, 110, 35);
+    color: white;
 }
