--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -25,6 +25,8 @@
     width: 10vw;
     height: 8vh;
     margin: 1vh;
+    margin-bottom: 0;
+    margin-top: 3vh;
     font-size: 25px;
     background-color: rgb(139, 110, 35);
     color: white;
@@ -34,4 +36,6 @@
     border: solid 2px pink;
     height: 8vh;
     color: rgb(139, 110, 35);
+    font-size: 30px;
+    font-weight: 800;
 }
