--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -52,5 +52,6 @@
     margin-bottom: -2vh;
     margin-top: 3vh;
     font-size: 25px;
-    
+    background-color: rgb(139, 110, 35);
+    color: white;
 }
