--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -80,6 +80,7 @@
     width: 22vw;
     height: 7vh;
     border-radius: 12px;
-    background-color: green;
+    background-color: rgb(139, 110, 35);
+    font-size: 30px;;
     font-size: 22px;
 }
