changed color to bb blue

--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -75,7 +75,7 @@
 }
 
 .openMakeAccountButton{
-    border: solid 2px silver;
+    border: solid 2px rgb(3, 17, 42);
     margin-left: 8vh;
     width: 22vw;
     height: 7vh;
@@ -83,4 +83,5 @@
     background-color: rgb(139, 110, 35);
     font-size: 30px;;
     font-size: 22px;
+    color: rgb(3, 17, 42);
 }
