--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -82,6 +82,6 @@
     border-radius: 12px;
     background-color: rgb(139, 110, 35);
     font-size: 30px;;
-    font-size: 22px;
+    font-weight: 700;
     color: rgb(3, 17, 42);
 }
