adjusted height of fullOpenComponent to 55vh

--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -1,8 +1,8 @@
 
 .fullOpenComponent{
     background-color: rgb(3, 17, 42);
-    border: solid 2px green;
-    height: 45vh;
+    border: solid 2px brown;
+    height: 55vh;
     width: 30vw;
 }
 
