--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -11,6 +11,10 @@
     flex-direction: row;
 }
 
+.opennewaccounttextheader{
+    
+}
+
 .opencreateUserSection{
     display: flex;
     height: 30vh;
