--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -97,3 +97,15 @@
     font-weight: 700;
     color: rgb(3, 17, 42);
 }
+
+.openMakeAccountButton:hover{
+    border: solid 2px rgb(3, 17, 42);
+    margin-left: 8vh;
+    width: 22vw;
+    height: 7vh;
+    border-radius: 12px;
+    background-color: rgb(139, 110, 35);
+    font-size: 30px;;
+    font-weight: 700;
+    color: rgb(3, 17, 42);
+}
