--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -1,6 +1,6 @@
 .fullTransferComponent{
     height: 65vh;
-    background-color: rgb(3, 17, 42);
+    background-image: linear-gradient(#03112A 70%, rgb(28, 28, 88));
     width: 30vw;
     display: flex;
     flex-direction: column;
