added font weight of 700

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -13,6 +13,8 @@
 }
 
 .transferTextheader{
+    font-family: 'Dosis', sans-serif;
+    font-weight: 700;
     font-size: 45px;
     color: white;
     margin-left: 6vw;
