--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -9,7 +9,6 @@
 .transferTop{
     display: flex;
     flex-direction: row;
-    border: solid 2px orange;
 }
 
 .transferTextheader{
@@ -17,21 +16,33 @@
     font-weight: 700;
     font-size: 45px;
     color: white;
-    margin-left: 6vw;
+    margin-left: 7vw;
 }
 
 .transferAmountField{
     background-color: #414E65;
-    height: 20vh;
-    width: 25vw
-
+    height: 16vh;
+    width: 22vw;
+    margin-left: 9vh;
+    margin-top: 3vh;
+    border-radius: 12px;
 }
 
 .transferFromToField{
-    border: solid 2px red;
-}
+    background-color: #414E65;
+    height: 16vh;
+    width: 22vw;
+    margin-left: 9vh;
+    margin-top: 3vh;
+    border-radius: 12px;}
 
 
 .transferButton{
-    border: solid 2px orange;
+    background-color: #414E65;
+    height: 7vh;
+    width: 22vw;
+    margin-left: 9.3vh;
+    margin-top: 3vh;
+    border-radius: 12px;
+    color: white;
 }
