added flex direction of row

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -21,6 +21,7 @@
 
 .transferAmountField{
     display: flex;
+    flex-direction: row;
     background-color: #414E65;
     height: 16vh;
     width: 22vw;
