added css block for transfer dollar sign

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -30,6 +30,10 @@
     border-radius: 12px;
 }
 
+.transferDollarSign{
+    
+}
+
 .transferFromToField{
     background-color: #414E65;
     height: 16vh;
