added text allign and other propeerties

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -32,6 +32,11 @@
 
 .transferDollarSign{
     color: white;
+    height: 5vh;
+    width: 5vw;
+    align-self: center;
+    text-align: center;
+    border: solid 2px green;
 }
 
 .transferFromToField{
