--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -34,6 +34,7 @@
     color: white;
     height: 5vh;
     width: 5vw;
+    font-size: 35px;
     align-self: center;
     text-align: center;
     border: solid 2px green;
