created css block for transfer input

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -39,6 +39,11 @@
     text-align: center;
 }
 
+
+.transferInput{
+    
+}
+
 .transferFromToField{
     background-color: #414E65;
     height: 16vh;
