--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -52,6 +52,7 @@
 
 .transferFromToField{
     display: flex;
+    flex-direction: row;
     background-color: #414E65;
     height: 16vh;
     width: 22vw;
