--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -58,7 +58,9 @@
     width: 22vw;
     margin-left: 9vh;
     margin-top: 3vh;
-    border-radius: 12px;}
+    border-radius: 12px;
+    border: solid 2px orange;
+}
 
 
 .transferButton{
