changed flex direction to column

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -52,7 +52,7 @@
 
 .transferFromToField{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: #414E65;
     height: 16vh;
     width: 22vw;
