added transfer form to top

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -59,7 +59,10 @@
     margin-left: 9vh;
     margin-top: 3vh;
     border-radius: 12px;
-    border: solid 2px orange;
+}
+
+.transferFromToTop{
+    
 }
 
 
