--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -33,11 +33,12 @@
 .transferDollarSign{
     color: white;
     height: 12vh;
-    width: 5vw;
+    width: 3vw;
     font-size: 50px;
     align-self: center;
     text-align: center;
     margin-top: 2vh;
+    border: solid 2px green;
 }
 
 
