added css block for transfer decorative line

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -62,6 +62,10 @@
     border-radius: 12px;
 }
 
+.transferDecorativeLine{
+    
+}
+
 .transferFromToTop{
     height: 8vh;
     border-bottom: solid 2px gold;
