moved margin left from transferfromtobottom to transfertowrrd

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -80,11 +80,11 @@
 .transferFromToBottom{
     display: flex;
     flex-direction: row;
-    margin-left: 3vw;
 }
 
 .transferToWord{
-    
+    border: solid 2px greenyellow;
+    margin-left: 3vw;
 }
 
 .transferDropDown{
