--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -83,9 +83,9 @@
 }
 
 .transferToWord{
-    margin-left: 2vw;
+    margin-left: 1.5vw;
     font-weight: 700;
-    color: white;
+    color: rgb(224, 196, 36);
     font-size: 30px;
 }
 
