changed color to white on transfer drop down

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -96,7 +96,8 @@
     margin-left: .5vw;
     margin-top: .5vh;
     background-color: #414E65;
-    font-size: 20px;
+    font-size: 24px;
+    color: white;
 }
 
 .transferButton{
