changed dollar sign color to bb gold

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -31,7 +31,7 @@
 }
 
 .transferDollarSign{
-    color: white;
+    color: rgb(139, 110, 35);
     height: 12vh;
     width: 3vw;
     font-size: 50px;
