--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -7,4 +7,5 @@
     width: 30vw;
     display: flex;
     flex-direction: column;
+    background-image: linear-gradient(#03112A 70%, rgb(28, 28, 88));
 }
