--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -9,3 +9,7 @@
     flex-direction: column;
     background-image: linear-gradient(#03112A 70%, rgb(28, 28, 88));
 }
+
+.transferConfirmationTopDiv{
+    
+}
