placed six divs in the tranfeconfirmatioinmiddlescction

--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -11,7 +11,8 @@
 }
 
 .transferConfirmationTopDiv{
-
+    display: flex;
+    flex-direction: row;
 }
 
 .transferConfirmationMiddleSection{
@@ -19,5 +20,5 @@
 }
 
 .transferConfirmationButton{
-    
+
 }
