added height and width to the transferconirmationmiddlesection

--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -18,6 +18,8 @@
 .transferConfirmationMiddleSection{
     display: flex;
     flex-direction: column;
+    height: 20vh;
+    width: 20vw;
 }
 
 .transferConfirmationButton{
