--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -3,12 +3,19 @@
     width: 30vw;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(#03112A 70%, rgb(28, 28, 88));
+    background-image: linear-gradient(#03112A 50%, rgb(28, 28, 88));
 }
 
 .transferConfirmationTopDiv{
     display: flex;
     flex-direction: row;
+}
+
+.transferConfirmationHeader{
+    margin-top: 4vh;
+    margin-left: 7vw;
+    font-size: 25px;
+    color: white;
 }
 
 .transferConfirmationMiddleSection{
