added css block

--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -25,6 +25,10 @@
     width: 20vw;
 }
 
+.transferConfirmationTransferAmountText{
+    
+}
+
 .transferConfirmationButton{
     height: 6vh;
     width: 12vw;
