added css block for tranferconfirmation

--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -29,6 +29,10 @@
     color: white;
 }
 
+.transferConfirmationAmountValue{
+    
+}
+
 .transferConfirmationButton{
     height: 6vh;
     width: 12vw;
