added margin top

--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -27,7 +27,8 @@
 
 .transferConfirmationTransferAmountText{
     color: white;
-    margin-left: 5vw;
+    margin-top: 2vh;
+    margin-left: 8vw;
 }
 
 .transferConfirmationAmountValue{
