--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -1,5 +1,5 @@
 .fullCompleteTransferComponent{
-    height: 50vh;
+    height: 55vh;
     width: 30vw;
     display: flex;
     flex-direction: column;
@@ -21,8 +21,10 @@
 .transferConfirmationMiddleSection{
     display: flex;
     flex-direction: column;
-    height: 20vh;
+    height: 42vh;
     width: 20vw;
+    border: solid 2px gray;
+    margin-left: 5vw;
 }
 
 .transferConfirmationTransferAmountText{
@@ -32,25 +34,25 @@
 }
 
 .transferConfirmationAmountValue{
-    color: white;
+    color: rgb(139, 110, 35);
     height: 12vh;
     font-size: 65px;
-    margin-left: 6vw;
+    margin-left: 4vw;
     margin-top: 0;
 }
 .transferConfirmationArrow{
-    color: white;
-    margin-left: 12vw;
+    color: rgb(255, 209, 93);
+    margin-left: 8vw;
 }
 
 .transferConfirmationFromAccountText{
     color: white;
-    margin-left: 8vw;
+    margin-left: 3.3vw;
 }
 
 .transferConfirmationToText{
     color: white;
-    margin-left: 8vw;
+    margin-left: 5vw;
 }
 
 .transferConfirmationDecorativeLine{
@@ -61,9 +63,9 @@
 
 .transferConfirmationButton{
     background-color: coral;
-    height: 6vh;
+    height: 7vh;
     width: 12vw;
-    margin-left: 8vw;
+    margin-left: 4vw;
     margin-top: 2vh;
     color: rgb(24, 24, 96);
     font-weight: 700;
