--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -76,7 +76,9 @@
     width: 15vw;
     margin-left: 4vw;
     margin-top: 2vh;
-    color: rgb(24, 24, 96);
+    color: rgb(3, 17, 42);
     font-weight: 700;
+    font-size: 20px;
     border-radius: 12px;
+    border: solid 2px rgb(3, 17, 42)
 }
