--- a/src/Home.css
+++ b/src/Home.css
@@ -11,11 +11,15 @@ flex-direction: row;
 margin-left: 1vw;
 }
 
+
+#fullpage{
+    width: 100%;
+    height: 100%;
+}
 .top_section{
     height: 12vh;
     width: 100vw;
     background-color: rgb(3, 17, 42);
-    border: solid 2px;
     display: flex;
     flex-direction: row;
     border-bottom-color: brown;
@@ -262,4 +266,294 @@ margin-left: 1vw;
     font-size: 35px;
     font-weight: 700;
     color: rgb(153, 115, 19);
+}
+
+
+@media screen and (max-width: 350px)
+{ 
+
+    #fullpage{
+        width: 100%;
+        height: 100%;
+        border: solid 4px silver
+    }
+    .top_section{
+         width: 100rem;
+        height: 20vh;
+    }
+
+    .logo{
+        font-size: 35px;
+        font-weight: bold;
+        color:rgb(139, 110, 35);
+        border: solid 2px green;
+    }
+}
+
+
+
+
+
+
+@media screen and (max-width: 576px)
+{ 
+
+    #fullpage{
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    .top_section{
+        width: 100rem;
+        height: 16vh;
+    }
+
+    .logo{
+        font-weight: bold;
+        height: 12vh;
+        width: 45vw;
+        color: rgb(139, 110, 35);
+        font-size: 35px;
+        display: inline-flex;
+    }
+
+    .navlist{
+        display: none;
+        flex-direction: row;
+        list-style: none;
+        width: 30vw;
+        height: 20vh;
+        margin-top: 4vh;
+        margin-left: 30vw;
+        color: cornsilk;
+        font-size: large;
+    }
+    
+    #signin{
+        height: 44px;
+        margin-top: 5vh;
+        border-radius: 20px;
+        width: 100px;
+        margin-left: 18vw;
+        color: rgb(3, 17, 42);
+        font-weight: 900;
+        letter-spacing: 1px;
+        font-size: 20px;
+        background-color: silver;
+    }
+    
+    .moreOptions{
+        width: 100vw;
+        background-color: rgb(240, 240, 240);
+        height: 10vh;
+        flex-direction: row;
+        color: brown;
+        display: none;
+    }
+    
+    .navListTwo{
+        display: none;
+        flex-direction: row;
+        width: 95vw;
+        font-size: 20px;
+    }
+    
+    .hoverStart{
+        margin-right: 3vw;
+        height: 7vh;
+        border-bottom: solid 4px goldenrod;
+    }
+    
+    .navListTwo li{
+        margin-right: 3vw;
+        height: 7vh;
+        display: none;
+    }
+    
+    .navListTwo li:hover{
+        margin-right: 3vw;
+        height: 7vh;
+        border-bottom: solid 4px goldenrod;
+        display: none;
+    }
+    
+    .secondOptionstab{
+        width: 100vw;
+        background-color: rgb(255, 255, 255);
+        height: 9vh;
+        display: none;
+        flex-direction: row;
+    }
+    
+    .navListThree{
+        display: none;
+        flex-direction: row;
+        width: 95vw;
+        font-size: 16px;
+        border: solid 2px red;
+    }
+    
+    .navListThree li{
+        display: none;
+        font-size: 18px;
+        margin-right: 2vw;
+    }
+    
+    .navListThree li:hover{
+        font-size: 18px;
+        margin-right: 2vw;
+        color: goldenrod;
+        display: none;
+    }
+    
+    
+    .bodysection{
+        height: 84vh;
+        background-image: url("../public/basicbankfamily3.jpg");
+        background-repeat: no-repeat;
+        background-position-x: right;
+        background-position-y: bottom;
+        background-color:rgb(139, 110, 35);
+        background-blend-mode: var(#ba8c43);
+        background-image: radial-gradient();
+        background-blend-mode: screen;
+        opacity: 90%;
+        border-top: solid 1px orange;
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .siginInSection{
+        height: 64vh;
+        width: 27vw;
+        background-color: rgb(3, 17, 42);
+        margin-top: 2vh;
+        margin-left: 2vh;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .sloganSection{
+        margin-top: 14vh;
+        height: 50vh;
+        width: 25vw;
+        color: black;
+        font-size: 50px;
+    }
+    
+    .buildingsmart{
+        margin-left: 2vw;
+    }
+    
+    .username{
+        display: flex;
+        height: 6vh;
+        width: 20vw;
+        margin-top: 6.5vh;
+        margin-left: 3.5vw;
+        background-color: rgb(3, 17, 42);
+        border: none;
+        border-bottom: solid 2px white;
+        color: rgb(255, 222, 222);
+        font-size: 25px;
+        font-weight: 700;
+        letter-spacing: 1.3px;
+    }
+    
+    .password{
+        display: flex;
+        height: 6vh;
+        width: 20vw;
+        margin-top: 2vh;
+        margin-left: 3.5vw;
+        background-color: rgb(3, 17, 42);
+        border: none;
+        border-bottom: solid 2px white;
+        color: rgb(255, 222, 222);
+        font-size: 25px;
+        font-weight: 700;
+        letter-spacing: 1.3px;
+    }
+    
+    .submitButton{
+        background-color: rgb(3, 17, 42);
+        margin-left: 3.5vw;
+        margin-top: 4vh;
+        border-color: white;
+        border: 1px solid;
+        color: whitesmoke;
+        font-size: larger;
+        height: 40px;
+        width: 20vw;
+    }
+    
+    .wealth{
+        margin-left: 7vw;
+    
+    }
+    
+    .bottomslogantext{
+        font-size: 25px;
+        margin-left: 3vw;
+        display: flex;
+        flex-flow: wrap;
+    }
+    
+    .learnmore{
+        background-color:rgb(139, 110, 35);
+        width: 20vw;
+        height: 8vh;
+        border: solid 1.5px black;
+        border-radius: 25px;
+        margin-left: 2vw;
+        color: black;
+        font-size: 23px;
+        font-weight: 800;
+    }
+    
+    
+    .fillerSection{
+        display: flex;
+        flex-direction: column;
+        height: 68vh;
+        width: 46vw;
+        color: white;
+        font-size: 30px;
+        padding-top: 1.5vh;
+        padding-left: 2vw;
+    }
+    
+    
+    .firstFillerSection{
+        height: 18vh;
+        width: 18vw;
+        margin-top: 1vh;
+        color: rgb(3, 17, 42);
+        font-size: 30px;
+        font-family: 'Mynerve', cursive;
+        padding-top: 1.5vh;
+        padding-left: 2vw;
+    }
+    
+    .secondFillerSection{
+        display: flex;
+        flex-direction: column;
+        height: 18vh;
+        width: 20vw;
+        border-top: solid 3px white;
+        border-bottom: solid 3px white;
+        margin-left: 18vw;
+        margin-top: 20vh;
+        color: white;
+        font-size: 30px;
+        padding-top: 1.5vh;
+        padding-left: 2vw;
+    }
+    
+    .basic{
+        font-size: 35px;
+        font-weight: 700;
+        color: rgb(153, 115, 19);
+    }
+    
 }
