--- a/src/Home.css
+++ b/src/Home.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Dosis&family=Mynerve&display=swap');
+
 li{
 list-style: none;
 flex-direction: row;
@@ -13,9 +14,10 @@ margin-left: 1vw;
 
 
 #fullpage{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
+
 .top_section{
     height: 12vh;
     width: 100vw;
@@ -27,21 +29,22 @@ margin-left: 1vw;
 }
 
 .logo{
+    display: inline-flex;
     font-size: 50px;
     font-weight: bold;
-    width: 30vw;
+    width: 20vw;
     color:rgb(139, 110, 35);
-    margin-left: 3.5vw;
+    height: 4rem;
+    margin: 0 auto;
 }
 
 .navlist{
     display: flex;
     flex-direction: row;
     list-style: none;
-    width: 75px;
+    width: 18rem;
     height: 30px;
     margin-top: 4vh;
-    margin-left: 30vw;
     color: cornsilk;
     font-size: large;
 }
@@ -49,9 +52,10 @@ margin-left: 1vw;
 #signin{
     height: 44px;
     margin-top: 2vh;
+    margin-right: 5vw;
     border-radius: 20px;
     width: 100px;
-    margin-left: 15vw;
+    margin-left: 5vw;
     color: rgb(3, 17, 42);
     font-weight: 900;
     letter-spacing: 1px;
@@ -269,42 +273,17 @@ margin-left: 1vw;
 }
 
 
-@media screen and (max-width: 350px)
-{ 
-
-    #fullpage{
-        width: 100%;
-        height: 100%;
-        border: solid 4px silver
-    }
-    .top_section{
-         width: 100rem;
-        height: 20vh;
-    }
-
-    .logo{
-        font-size: 35px;
-        font-weight: bold;
-        color:rgb(139, 110, 35);
-        border: solid 2px green;
-    }
-}
-
-
-
-
 
 
 @media screen and (max-width: 576px)
 { 
 
     #fullpage{
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
+        width: 10vw;
+        height: 100vh;
     }
     .top_section{
-        width: 100rem;
+        width: 100vw;
         height: 16vh;
     }
 
@@ -330,11 +309,10 @@ margin-left: 1vw;
     }
     
     #signin{
-        height: 44px;
+        height: 20px;
         margin-top: 5vh;
         border-radius: 20px;
         width: 100px;
-        margin-left: 18vw;
         color: rgb(3, 17, 42);
         font-weight: 900;
         letter-spacing: 1px;
